<resources>
    <string name="app_name">SportsTracker</string>

    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="resetPassword">Enviar Contraseña</string>
    <string name="invitation">¿Que tanto puedes subir de nivel?</string>
    <string name="acept">He leído y acepto los</string>
    <string name="terms">términos y condiciones de uso.</string>

    <string name="empty_email">Introduce un email</string>
    <string name="invalid_email">mmm parece que el email está mal escrito</string>

    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="Confirmarpassword">Confirmar Contraseña</string>
    <string name="bar_title_terms">Términos y Condiciones de Uso</string>
    <string name="terms1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rhoncus convallis metus at pretium. Vivamus at lacinia leo. Praesent velit elit, suscipit sit amet pulvinar id, imperdiet ac massa. Quisque molestie lectus rhoncus urna tempor, ut lacinia mi tempor. Praesent volutpat, ligula eget lobortis cursus, mauris libero consequat ligula, nec scelerisque erat ipsum tempor justo. Aliquam ornare faucibus augue vel faucibus. Ut sollicitudin commodo tortor eu faucibus. Vestibulum lacinia ligula sed tortor auctor, vitae sollicitudin lorem dapibus. Phasellus sed tincidunt odio.</string>
    <string name="terms2">Praesent arcu nisi, auctor quis tempor id, vehicula non nulla. Sed a fermentum tellus, quis pharetra lorem. Fusce vehicula libero in ultricies varius. Suspendisse vel velit tortor. Aliquam non nisi eget lectus tempor consectetur sed in magna. Nullam tincidunt, nibh ut sodales suscipit, ante est luctus purus, sed pellentesque ipsum massa et quam. Proin sed sapien ultrices ex aliquet elementum sed et erat. Sed tincidunt felis sapien, a suscipit massa cursus et. Phasellus auctor tellus ac neque maximus accumsan. Morbi sit amet odio nec sapien pharetra elementum maximus id odio. Integer laoreet, neque id efficitur auctor, magna massa consequat justo, quis vehicula ipsum massa at sem. Morbi in ornare sapien, in luctus mauris. </string>
    <string name="terms3">Sed id libero auctor, lacinia lectus a, consequat nisl. Nam quis suscipit purus. Fusce at congue quam. Etiam congue imperdiet bibendum. Etiam at porttitor ipsum. Donec consectetur sapien in neque tempus tempus. Sed vulputate rutrum ultrices. Praesent in est leo. Suspendisse euismod purus id urna tempus pellentesque. Praesent condimentum nisl sit amet purus pulvinar sagittis. Cras purus felis, hendrerit et ornare ut, molestie id orci. Integer dictum consequat leo, id pretium urna tempus et. Donec nibh ante, laoreet id lorem vitae, vestibulum sollicitudin lorem. </string>
    <string name="Sign_Out">Cerrar sesión</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="menu_maps">Mapas</string>
    <string name="logout">Cerrar sesión</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_plantillas">Plantillas</string>
    <string name="menu_ejercicio">Ejercicio</string>
    <string name="menu_seguimiento">Seguimiento</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_chat">Chat</string>
    <string name="bar_title">SportsTracker</string>
    <string name="user">user@user-com</string>
    <string name="nav_hi">Moviendo el cuerpo mejoramos condición</string>
    <string name="level">Nivel</string>
    <string name="bar_title_record">Metas</string>
    <string name="title_activity_ejercicio">EjercicioActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings">Ajustes</string>
    <string name="delete">Delete</string>
    <string name="equalizer">Equalizer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="userNameChat">Anonimozz</string>
    <string name="clear_play_list">Limpiar playlist</string>
    <string name="clearing_play_list">Limpiando playlist…</string>
    <string name="close_app">Close App</string>
    <string name="empty_list">Empty list</string>
    <string name="fill_play_list">Agregar canciones</string>
    <string name="filling_play_list">Agregando canciones…</string>
    <string name="music_path">Ruta de la musica</string>
    <string name="music_paths">Directorio de musica</string>
    <string name="music_path_added">Ruta agregada</string>
    <string name="music_path_already_stored">Esta ruta ya esta guardada</string>
    <string name="music_path_removed">Ruta eliminada</string>
    <string name="pausing">Pausa</string>
    <string name="play_list">Playlist</string>
    <string name="play_list_filter">Search for a song</string>
    <string name="playing_song">Reproduciendo \"%1$s\"</string>
    <string name="shuffle_disabled">Mix deshabilitado</string>
    <string name="shuffle_enabled">Mix habilitado</string>
    <string name="unknown_version">Unknown Version</string>
    <string name="number_of_songs">%1$s canciones</string>
    <string name="menu_metas">Metas</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_navegacion_amigos">NavegacionAmigos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>