<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_dark"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:backgroundTint="@color/white"
                android:paddingTop="20dp"
                app:srcCompat="@mipmap/fitness" />

            <TextView
                android:id="@+id/txtInvitation"
                style="@style/viewCustom"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                android:text="@string/invitation"
                android:textColor="@color/orange"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/etEmail"
                style="@style/viewCustom"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingTop="30dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/viewCustom"
                android:backgroundTint="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/tvLogin"
                style="@style/viewCustom"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:onClick="login"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtForgotPassword"
                style="@style/viewCustom"
                android:gravity="center_horizontal"
                android:onClick="forgotPassword"
                android:paddingTop="0dp"
                android:text="@string/forgotPassword"
                android:textColor="@color/gray"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/lyTerms"
                style="@style/viewCustom"
                android:background="@color/gray_dark"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbAcept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acept"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/tvTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:onClick="goTerms"
                    android:text="@string/terms"
                    android:textColor="@color/salmon"
                    android:textSize="10sp" />

            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btSignGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>